# ETE-WHATSUP

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RUNBOOK.md  SECURITY.md  docker-compose.yml
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml
backend/api/: .env.example  Cargo.toml  Dockerfile  contacts_sample.csv  run_tests.ps1  test_flow.ps1  validate_prod.ps1
backend/api/src/: cache.rs  config.rs  db.rs  errors.rs  main.rs
backend/api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  rbac.rs
backend/api/src/models/: campaign.rs  contact.rs  conversation.rs  message.rs  mod.rs  organization.rs  pagination.rs  subscription.rs  template.rs  user.rs  whatsapp_account.rs
backend/api/src/routes/: analytics.rs  auth.rs  campaigns.rs  contacts.rs  conversations.rs  messages.rs  mod.rs  organizations.rs  schedules.rs  templates.rs  webhooks.rs  whatsapp.rs
backend/api/src/services/: audit_service.rs  auth_service.rs  campaign_service.rs  contact_service.rs  email_service.rs  import_worker.rs  messaging_service.rs  mod.rs  n8n_service.rs  recipient_resolver.rs  scheduler.rs  storage_service.rs  whatsapp_service.rs
backend/api/src/services/worker/: mod.rs
backend/api/src/utils/: encryption.rs  jwt.rs  mod.rs  phone.rs
db/: seed.sql
db/migrations/: 001_init_users.sql  002_organizations.sql  003_whatsapp_accounts.sql  004_contacts.sql  005_campaigns.sql  006_messages.sql  007_templates.sql  008_conversations.sql  009_schedules.sql  010_subscriptions.sql  011_security_hardening.sql  012_import_worker.sql  013_message_queue_status.sql  014_n8n_production.sql
frontend/: .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/onboarding/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(auth)/verify-email/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/automation/: page.tsx
frontend/src/app/(dashboard)/billing/: page.tsx
frontend/src/app/(dashboard)/campaigns/: page.tsx
frontend/src/app/(dashboard)/campaigns/[id]/: page.tsx
frontend/src/app/(dashboard)/contacts/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/inbox/: page.tsx
frontend/src/app/(dashboard)/schedules/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/(dashboard)/team/: page.tsx
frontend/src/app/(dashboard)/templates/: page.tsx
frontend/src/app/(dashboard)/whatsapp/: page.tsx
frontend/src/components/layout/: dashboard-shell.tsx  sidebar.tsx  topbar.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: authStore.ts  campaignStore.ts
frontend/src/types/: index.ts
infrastructure/n8n/workflows/: .gitkeep
infrastructure/nginx/: nginx.conf
infrastructure/redis/: redis.conf
