[package]
name = "whatsup-api"
version = "0.1.0"
edition = "2021"
authors = ["ETE WhatsUp Team"]
description = "Enterprise WhatsApp Bulk Messaging Platform — REST API"

[[bin]]
name = "whatsup-api"
path = "src/main.rs"

[dependencies]
# ── Async runtime ──────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Web framework ─────────────────────────────────────────────
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "compression-gzip", "request-id"] }
hyper = { version = "1", features = ["full"] }

# ── Database ──────────────────────────────────────────────────
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }

# ── Redis ─────────────────────────────────────────────────────
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# ── Serialization ─────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Authentication & Security ─────────────────────────────────
jsonwebtoken = "9"
bcrypt = "0.15"
totp-rs = { version = "5", features = ["gen_secret", "otpauth", "qr"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# ── IDs & Time ────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# ── HTTP client (for Meta WA API & n8n) ───────────────────────
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# ── File handling ─────────────────────────────────────────────
csv = "1"
calamine = "0.24"      # Excel parsing
mime = "0.3"

# ── S3 / Object Storage ───────────────────────────────────────
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"

# ── Email ─────────────────────────────────────────────────────
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }

# ── Validation ────────────────────────────────────────────────
validator = { version = "0.18", features = ["derive"] }

# ── Logging & Tracing ────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# ── Config / Environment ─────────────────────────────────────
dotenvy = "0.15"
config = "0.14"

# ── Error handling ────────────────────────────────────────────
anyhow = "1"
thiserror = "1"

# ── Pagination ────────────────────────────────────────────────
serde_qs = "0.12"

# ── Rate limiting ────────────────────────────────────────────
governor = { version = "0.6", features = ["dashmap"] }

# ── Other utilities ───────────────────────────────────────────
slug = "0.1.5"
rust_decimal = { version = "1.34", features = ["serde-float"] }
bytes = "1"

[dev-dependencies]
axum-test = "14"
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
